Fix profilepicture image size on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -197,7 +197,7 @@ h2 {
     align-items: center;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
     #content {
         width: 100%;
         min-width: 100%;
